--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -6,19 +6,22 @@
   </div>
 </div>
 
-<div class="container">
-<ul>
+<div class="container my-5">
+  <div class="cards">
 <% @restaurants.each do |restaurant| %>
-<div class="card-product mt-5">
+<div class="card-trip">
   <img src="https://images.unsplash.com/photo-1580372648129-cb82ef5f1052?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=80" />
-  <div class="card-product-infos">
-    <h2><%=link_to restaurant.name , restaurant_path(restaurant) %></h2>
-    <p><strong><%= restaurant.address %></strong></p>
+  <div class="card-trip-infos">
+    <div>
+      <h2><%=link_to restaurant.name , restaurant_path(restaurant) %></h2>
+      <p>restaurant.address</p>
+    </div>
+    <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
   </div>
 </div>
-<% end %>
-</ul>
 
-<%= link_to "add a new restaurant", new_restaurant_path %>
+<% end %>
+</div>
+<%= link_to "add a new restaurant", new_restaurant_path , class: "btn btn-primary mt-5"%>
 
 </div>
